--- a/src/less/cells/product-media-cell.less
+++ b/src/less/cells/product-media-cell.less
@@ -98,6 +98,23 @@
 			}
 		}
 		
+		@media all and (min-width: 1440px) {
+			&.iphone {
+				width: 230px;
+				height: 408px;
+			}
+			
+			&.ipad {
+				width: 235px;
+				height: 314px;
+				
+				&.landscape {
+					width: 314px;
+					height: 235px;
+				}
+			}
+		}
+		
 		.artwork-view {
 			position: absolute;
 			top: 0;
