--- a/src/less/cells/product-rating-cell.less
+++ b/src/less/cells/product-rating-cell.less
@@ -87,6 +87,10 @@
 					height: 7px;
 					.encoded-svg-background("<svg width='7px' height='7px' viewBox='0 0 7 7' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><polygon id='Star' points='3.5 5.25 1.44275162 6.33155948 1.8356511 4.04077974 0.171302193 2.41844052 2.47137581 2.08422026 3.5 0 4.52862419 2.08422026 6.82869781 2.41844052 5.1643489 4.04077974 5.55724838 6.33155948' fill='#86868A'/></svg>");
 					
+					&.outline {
+						.encoded-svg-background("<svg width='7px' height='7px' viewBox='0 0 7 7' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><polygon id='Star' points='3.5 5.25 1.44275162 6.33155948 1.8356511 4.04077974 0.171302193 2.41844052 2.47137581 2.08422026 3.5 0 4.52862419 2.08422026 6.82869781 2.41844052 5.1643489 4.04077974 5.55724838 6.33155948' stroke='#86868A' stroke-width='1'/></svg>");
+					}
+					
 					&:not(:first-child) {
 						margin-left: 2px;
 					}
