Added Navigation Bar Fixed a few graphical issues when using Title Header Views Improved scaling of Review cells on iPad

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -9,6 +9,7 @@ html
 		link(rel="stylesheet", href="../../lib/css/swiper.min.css")
 		link(rel="stylesheet", href="../css/storeUI-1.0.css")
 	body
+		.navigation-bar(data-title="Apps")
 		.collection-view
 			.horizontal-collection-view-cell.swiper-container#editorialCard
 				.swiper-wrapper
