--- a/src/less/cells/product-review-cell.less
+++ b/src/less/cells/product-review-cell.less
@@ -89,7 +89,8 @@
 			justify-content: space-between;
 			
 			.product-review-cell {
-				width: calc(~"50% - 15px");
+				width: calc(~"50% - 10px");
+				min-height: 220px;
 			}
 		}
 	}
