--- a/src/less/cells/titled-paragraph-cell.less
+++ b/src/less/cells/titled-paragraph-cell.less
@@ -65,6 +65,7 @@
 	&.detail-styling {
 		padding-top: 16px;
 		padding-bottom: 20px;
+		margin-bottom: 0;
 
 		@media all and (min-width: 767px) {
 			max-width: 672px;
