Added Status label Fixed margin of product rating view Fixed Expandable Text hiding empty lines when starting expanded A few more graphical fixes

--- a/src/less/cells/product-rating-cell.less
+++ b/src/less/cells/product-rating-cell.less
@@ -115,7 +115,8 @@
 		}
 	}
 	
-	& + .title-header-view {
+	& + .title-header-view,
+	& + .product-review-collection {
 		margin-top: 16px;
 		
 		&:after {
