--- a/src/less/cells/annotation-cell.less
+++ b/src/less/cells/annotation-cell.less
@@ -14,6 +14,13 @@
 			color: #8E8E93;
 		}
 		
+		.subtitle-label {
+			margin-left: 8px;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
+		}
+		
 		.annotation-cell-item {
 			display: flex;
 			justify-content: space-between;
