--- a/src/less/navigation-bar.less
+++ b/src/less/navigation-bar.less
@@ -29,7 +29,10 @@
 			position: absolute;
 			font-size: 34px;
 			font-weight: 700;
-			
+			width: 100%;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis;
 			padding: 3px 20px 9px;
 		}
 	}
