--- a/src/less/cells/brick-cell.less
+++ b/src/less/cells/brick-cell.less
@@ -1,3 +1,21 @@
+.brick-collection-cell:not(.swiper-container-multirow) .swiper-wrapper {
+	.brick-cell {
+		margin-right: 10px;
+		
+		@media all and (min-width: 767px) {
+			margin-right: 20px;
+		}
+		
+		@media all and (min-width: 833px) {
+			margin-right: 22px;
+		}
+		
+		@media all and (min-width: 1024px) {
+			margin-right: 30px;
+		}
+	}
+}
+
 .brick-cell {
 	width: 216px;
 	height: 180px;
