--- a/src/less/cells/medium-lockup-cell.less
+++ b/src/less/cells/medium-lockup-cell.less
@@ -1,3 +1,26 @@
+.medium-lockup-collection-cell:not(.swiper-container-multirow) .swiper-wrapper {
+	flex-wrap: wrap;
+	flex-direction: column;
+	max-height: 240px;
+	align-content: flex-start;
+	
+	.medium-lockup-cell {
+		margin-right: 10px;
+		
+		@media all and (min-width: 767px) {
+			margin-right: 20px;
+		}
+		
+		@media all and (min-width: 833px) {
+			margin-right: 22px;
+		}
+		
+		@media all and (min-width: 1024px) {
+			margin-right: 30px;
+		}
+	}
+}
+
 .medium-lockup-cell {
 	position: relative;
 	display: flex;
