--- a/src/less/cells/product-media-cell.less
+++ b/src/less/cells/product-media-cell.less
@@ -1,5 +1,23 @@
 @import "../_mixins";
 
+.product-media-collection-cell:not(.swiper-container-multirow) .swiper-wrapper {
+	.product-media-cell {
+		margin-right: 10px;
+		
+		@media all and (min-width: 767px) {
+			margin-right: 20px;
+		}
+		
+		@media all and (min-width: 833px) {
+			margin-right: 22px;
+		}
+		
+		@media all and (min-width: 1024px) {
+			margin-right: 30px;
+		}
+	}
+}
+
 .product-media-cell {
 	position: relative;
 	width: 100%;
