Added pointer cursor to various cells Navigation bar now has iOS 11's scaling effect

--- a/src/less/cells/medium-lockup-cell.less
+++ b/src/less/cells/medium-lockup-cell.less
@@ -26,6 +26,7 @@
 	display: flex;
 	height: 118px;
 	margin-top: 0 !important;
+	cursor: pointer;
 	
 	@media all and (min-width: 767px) {
 		height: 135px;
