--- a/src/less/cells/editorial-card.less
+++ b/src/less/cells/editorial-card.less
@@ -20,6 +20,7 @@
 	// height: 335px;
 	padding: 10px 0 32px;
 	box-shadow: inset 0 1px 0 0 var(--cell-separator);
+	cursor: pointer;
 	
 	.caption-label {
 		font-size: 11px;
