Added text alignment to lockup cells

--- a/src/less/cells/product-lockup-cell.less
+++ b/src/less/cells/product-lockup-cell.less
@@ -91,6 +91,16 @@
 				padding-top: 9px;
 			}
 			
+			&.text-left {
+				text-align: left;
+			}
+			&.text-center {
+				text-align: center;
+			}
+			&.text-right {
+				text-align: right;
+			}
+			
 			.value-label {
 				font-size: 22px;
 				font-weight: 500;
